--- a/css/modal-cookie-tac-style.css
+++ b/css/modal-cookie-tac-style.css
@@ -160,10 +160,11 @@
   opacity: 0.9;
 }
 
-.right-text {
+p.right-text {
   text-align: right;
+  font-size: 12px;
 }
 
-.right-text a{
+p.right-text a{
   color: #a8a8a8;
 }
