--- a/css/modal-cookie-tac-style.css
+++ b/css/modal-cookie-tac-style.css
@@ -2,7 +2,8 @@
 /* Modal Cookie - Newsletter */
 #active-popup {
   background-color: rgba(0,0,0,0.4);
-  position: absolute;
+  /*position: absolute;*/
+  position: fixed;
   width: 100%;
   height: 100% !important;
   top: 0;
